@@ -28,17 +28,20 @@ padding:
 	.type	abs32, %object
 	.size	abs32, 4
 abs32:
-	.word	x
+	# We use x + 1 instead so that addend is non-zero
+	# The disassembler sometimes skips repeating
+	# zeros and prints "..." instead.
+	.word	x + 1
 
 	.global	rel32
 	.type	rel32, %object
 	.size	rel32, 4
 rel32:
-	.word	x - .
+	.word	x + 1 - .
 
 	.global	abs16
 	.type	abs16, %object
 	.size	abs16, 2
 abs16:
-	.short	x
+	.short	x + 1
 	.short	0
